--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -2,13 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "276c5aa3",
-   "metadata": {
-    "toc": true
-   },
+   "id": "bb29ed76",
+   "metadata": {},
    "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Загрузка-данных-и-общая-информация\" data-toc-modified-id=\"Загрузка-данных-и-общая-информация-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Загрузка данных и общая информация</a></span></li><li><span><a href=\"#Предобработка-данных\" data-toc-modified-id=\"Предобработка-данных-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Предобработка данных</a></span></li><li><span><a href=\"#Обучение-модели\" data-toc-modified-id=\"Обучение-модели-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Обучение модели</a></span><ul class=\"toc-item\"><li><span><a href=\"#Подготовка-признаков\" data-toc-modified-id=\"Подготовка-признаков-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Подготовка признаков</a></span></li><li><span><a href=\"#Поиск-оптимальной-модели\" data-toc-modified-id=\"Поиск-оптимальной-модели-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Поиск оптимальной модели</a></span><ul class=\"toc-item\"><li><span><a href=\"#Артериальная-гипертензия\" data-toc-modified-id=\"Артериальная-гипертензия-3.2.1\"><span class=\"toc-item-num\">3.2.1&nbsp;&nbsp;</span>Артериальная гипертензия</a></span></li><li><span><a href=\"#ОНМК\" data-toc-modified-id=\"ОНМК-3.2.2\"><span class=\"toc-item-num\">3.2.2&nbsp;&nbsp;</span>ОНМК</a></span></li><li><span><a href=\"#Стенокардия,-ИБС,-инфаркт-миокарда\" data-toc-modified-id=\"Стенокардия,-ИБС,-инфаркт-миокарда-3.2.3\"><span class=\"toc-item-num\">3.2.3&nbsp;&nbsp;</span>Стенокардия, ИБС, инфаркт миокарда</a></span></li><li><span><a href=\"#Сердечная-недостаточность\" data-toc-modified-id=\"Сердечная-недостаточность-3.2.4\"><span class=\"toc-item-num\">3.2.4&nbsp;&nbsp;</span>Сердечная недостаточность</a></span></li><li><span><a href=\"#Прочие-заболевания-сердца\" data-toc-modified-id=\"Прочие-заболевания-сердца-3.2.5\"><span class=\"toc-item-num\">3.2.5&nbsp;&nbsp;</span>Прочие заболевания сердца</a></span></li></ul></li></ul></li><li><span><a href=\"#Тестирование-модели\" data-toc-modified-id=\"Тестирование-модели-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Тестирование модели</a></span></li></ul></div>"
+    "[Тестирование модели](#тестирование-модели)"
    ]
   },
   {
@@ -7718,7 +7715,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (windows store)",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -7732,7 +7729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -7754,7 +7751,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "9bc29f133a9a3f086cf28b7d5b14e33433f80fa1640a7532be081493d1f49efd"
+    "hash": "62108d3bcabba50a5551c94be0c58944c48365daffc285bf9efbbaced917d542"
    }
   }
  },
