--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -7441,7 +7441,8 @@
    "id": "af150dc2",
    "metadata": {},
    "source": [
-    "## Тестирование модели"
+    "## Тестирование модели\n",
+    "<a name=\"тестирование-модели\">"
    ]
   },
   {
